--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -116,6 +116,19 @@
 
   h2 {
     color: $primary-white;
+    margin-top: 10px;
+  }
+}
+
+.item-detail {
+  background-color: $primary-pink;
+  border-radius: 3px 3px 0px 0px;
+  padding: 10px;
+  margin-bottom: 5px;
+
+  h2 {
+    color: $primary-white;
+    margin-top: 10px;
   }
 }
 
